# ask-my-docs

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.clinerules/: architecture.md  conventions.md  implementation_guides.md  memorybank.md  project.md
.github/workflows/: eval.yml
config/: books.yaml  settings.yaml
data/eval/: golden_qa.jsonl
implementation_plan/: chunk_implementation.md
specification/: decision-log.md
src/amd/: config.py  exceptions.py
src/amd/cli/: main.py
src/amd/eval/: runner.py
src/amd/generation/: citation_validator.py  pipeline.py  prompts.py  providers.py
src/amd/indexing/: bm25_index.py  registry.py  vector_index.py
src/amd/ingestion/: chunker.py  cleaner.py  downloader.py  models.py
src/amd/reranking/: cross_encoder.py
src/amd/retrieval/: hybrid_retriever.py
tasks/: plan.md  todo.md
tests/cli/: test_main.py
tests/config/: test_config.py
tests/eval/: test_runner.py
tests/generation/: test_citation_validator.py  test_pipeline.py  test_prompts.py  test_providers.py
tests/indexing/: test_bm25_index.py  test_registry.py  test_vector_index.py
tests/ingestion/: test_chunker.py  test_cleaner.py  test_downloader.py
tests/reranking/: test_cross_encoder.py
tests/retrieval/: test_hybrid_retriever.py
